# polyvalid

./: .gitignore  Cargo.toml  README.md  package.json  polyvalid.test.js  polyvalid.wai  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  rust.yml
snapshots/JavaScript/: all files.snap  package__src__bindings__index.d.ts.snap  package__src__bindings__index.js.snap  package__src__bindings__polyvalid__intrinsics.js.snap  package__src__bindings__polyvalid__polyvalid.d.ts.snap  package__src__bindings__polyvalid__polyvalid.js.snap
snapshots/Python/: MANIFEST.in.snap  all files.snap  polyvalid____init__.py.snap  polyvalid__bindings____init__.py.snap  polyvalid__bindings__polyvalid____init__.py.snap  polyvalid__bindings__polyvalid__bindings.py.snap  polyvalid__py.typed.snap  pyproject.toml.snap
src/: bindings.rs  lib.rs
tests/python/: test_is_app_name_valid.py
