[package]
name = "polyvalid"
description = "A validator for package names, namespace, username and app name on wasmer"
version = "0.1.6"
license = "MIT"
repository = "https://github.com/ayys/polyvalid"
readme = "README.md"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]


[package.metadata.wapm]
namespace = "ayys"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "polyvalid.wai" }


[dependencies]
anyhow = "1.0.68"
regex = "1.7.3"
rstest = "0.17.0"
wai-bindgen-rust = "0.2.2"

[dev-dependencies]
anyhow = "1.0.68"
insta = { version = "1.18.2", features = ["filters"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = "0.6.0"

[[test]]
name = "polyvalid-integration-tests"
harness = false
